--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -11,7 +11,7 @@
 
                     <!-- Logo -->
                     <a class="logo float-left scrollTo" href="#top">
-                        <%= image_tag "R2.png" %>
+                     <%= image_tag "R2.png" %>
                     </a>
 
                     <!-- 
@@ -59,7 +59,7 @@
                                     </a>
                                 </li>
                                 <li><!-- INTERVENTIONS -->
-                                    <a href="/interventions/new">
+                                    <a href="#interventions">
                                         INTERVENTIONS
                                     </a>
                                 </li>
