--- a/app/views/application/intervention_page.html.erb
+++ b/app/views/application/intervention_page.html.erb
@@ -28,6 +28,7 @@
 		<%= javascript_include_tag 'form.estimate.nbrelevator', media: 'all', 'data-turbolinks-track': 'reload' %>
     	<%= javascript_include_tag 'form.estimate.rates', media: 'all', 'data-turbolinks-track': 'reload' %>
     	<%= javascript_include_tag 'form.hide.show', media: 'all', 'data-turbolinks-track': 'reload' %>
+		<%= javascript_include_tag 'form.hide.show', media: 'all', 'data-turbolinks-track': 'reload' %>
 	</head>
 
 	<!--
