--- a/app/views/interventions/new.html.erb
+++ b/app/views/interventions/new.html.erb
@@ -1,6 +1,13 @@
+<div class = "contaoiner">
+<h2>New Intervention</h2>
 <h1>Create New Intervention Item</h1>
+
+<h4> Please select and fill all mandatory fields below.</h4>
+
 
 <%= render 'form', intervention: @intervention %>
 
 <%= link_to 'Back', interventions_path %>
+<%= link_to 'Edit', interventions_path %>
 
+<div>
