--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -59,9 +59,7 @@
                                     </a>
                                 </li>
                                 <li><!-- INTERVENTIONS -->
-                                    <a href="#interventions">
-                                        INTERVENTIONS
-                                    </a>
+                                    <%= link_to 'INTERVENTIONS', '/interventions/new', :class => 'navbar-link' %>
                                 </li>
                             </ul>
 
